--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.383.0",
     "mongoose": "^8.4.1",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "qs": "^6.12.1",
     "react": "^18",
     "react-dom": "^18",
